cluster/base/infrastructure/22-schenkmatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schenkmatch
  namespace: schenkmatch
spec:
  selector:
    app: schenkmatch
  ports:
    - port: 3000
      targetPort: 3000
      appProtocol: kubernetes.io/http
