cluster/base/infrastructure/22-schenkmatch/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace-egress
  namespace: schenkmatch
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - {}
